--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mosinsmj-deployment
+  name: dev-deployment
 spec:
   replicas: 1  # Number of NGINX pods to run
   selector:
